# testMNIST

./: CMakeLists.txt  main.cpp
cmake/: FindOpenCV.cmake
src/: CMakeLists.txt  ImageHeader.cpp  ImageHeader.h  LabelHeader.cpp  LabelHeader.h  Neuron.cpp  Neuron.h  UtilityFunctions.cpp  UtilityFunctions.h
